--- a/part7/bloglist/frontend/src/index.css
+++ b/part7/bloglist/frontend/src/index.css
@@ -15,3 +15,10 @@
 .error {
   color: red;
 }
+
+.header {
+  display: flex;
+  background: gray;
+  padding: 1rem;
+  justify-content: space-between;
+}
